--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -7,6 +7,8 @@ project:
         api_version: '57.0'
     dependencies:
         - github: 'https://github.com/SalesforceFoundation/EDA'
+        - namespace: lms_hed
+          version: '1.14'
     git:
         default_branch: 'main'
     source_format: sfdx
