--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -11,6 +11,10 @@ project:
           version: '1.17'
         - namespace: eb4sf
           version: '1.222'
+        - namespace: csumidp
+          version: '1.1'
+        - namespace: csumidp_hed
+          version: '1.0'
     git:
         default_branch: 'main'
     source_format: sfdx
