--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -7,6 +7,7 @@ project:
         api_version: '57.0'
     dependencies:
         - github: 'https://github.com/SalesforceFoundation/EDA'
+        - github: 'https://github.com/OEE-Application-Development/OEE-EDA-Base-Unlocked/tree/main/unpackaged/pre/Middleware_Integration'
         - namespace: lms_hed
           version: '1.18'
         - namespace: csumidp
