--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -8,7 +8,7 @@ project:
     dependencies:
         - github: 'https://github.com/SalesforceFoundation/EDA'
         - github: 'https://github.com/OEE-Application-Development/OEE-EDA-Base-Unlocked'
-          subfolder: 'unpackaged/pre/Middleware_Integration'
+          subfolder: 'unpackaged/pre/'
         - namespace: lms_hed
           version: '1.18'
         - namespace: csumidp
