--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -13,6 +13,7 @@ project:
           version: '1.1'
         - namespace: csumidp_hed
           version: '1.0'
+        - version_id: 04tQm0000009EJt
     git:
         default_branch: 'main'
     source_format: sfdx
