--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -34,6 +34,29 @@ tasks:
     run_tests:
         options:
             required_org_code_coverage_percent: 75
+    
+    update_admin_profile:
+        options:
+            record_types:
+                - record_type: Account.Academic_Program
+                  default: true
+                - record_type: Account.Educational_Institution
+                - record_type: Account.csumidp_hed__University_College
+                - record_type: Account.University_Department
+                - record_type: Account.lms_hed__LMS
+                - record_type: hed__Course__c.Credit
+                  default: true
+                - record_type: hed__Term__c.Credit
+                  default: true
+                - record_type: hed__Course_Enrollment__c.Student
+                  default: true
+                - record_type: hed__Plan_Requirement__c.AUCC_Requirement
+                - record_type: hed__Plan_Requirement__c.Course_Requirement
+                  default: true
+                - record_type: hed__Plan_Requirement__c.Generic_Requirement
+                - record_type: hed__Plan_Requirement__c.Requirement_Container
+                - record_type: hed__Plan_Requirement__c.Subject_Requirement
+                - record_type: hed__Plan_Requirement__c.Template_Instance
             
 orgs:
     scratch:
